--- a/public/src/css/header.css
+++ b/public/src/css/header.css
@@ -101,3 +101,71 @@ header {
 .companyImages::-webkit-scrollbar {
 	display: none;
 }
+
+.rectangle {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-grow: 0;
+	max-width: 400px;
+	text-align: left;
+	border-radius: 30px;
+	padding: 30px;
+	gap: 25px;
+
+	background-color: var(--color5--);
+	box-shadow: 4px 10px 30px 0 rgba(0, 0, 0, 0.06);
+}
+
+.rectContents,
+.rectangles {
+	display: flex;
+	flex-direction: column;
+}
+
+.rectContents {
+	gap: 5px;
+}
+.rectangles {
+	gap: 30px;
+}
+
+.sec3Contents {
+	display: grid;
+	align-items: center;
+	justify-content: space-between;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.sec3Con1 {
+	max-width: 500px;
+}
+
+/* Image Grid */
+.imgGrid {
+	display: grid;
+	max-width: 560px;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(12, 1fr);
+	gap: 20px;
+}
+
+.imgGrid img {
+	max-width: 100%;
+	border-radius: 30px;
+	box-shadow: 4px 10px 30px 0 rgba(0, 0, 0, 0.15);
+}
+
+.grid1 {
+	grid-column: 1/ 2;
+	grid-row: 2/ 12;
+}
+
+.grid2 {
+	grid-column: 2/ 3;
+	grid-row: 1/6;
+}
+.grid3 {
+	grid-column: 2/ 3;
+	grid-row: 5/11;
+}
