--- a/public/src/css/header.css
+++ b/public/src/css/header.css
@@ -94,7 +94,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	overflow: hidden;
+	overflow: scroll;
 	gap: 20px;
 }
 
